--- a/src/sass/modules/component/element/list/_list-placeholder.scss
+++ b/src/sass/modules/component/element/list/_list-placeholder.scss
@@ -22,6 +22,7 @@
             color: $white;
             padding-left: em(10);
             text-align: left;
+            text-shadow: 0 em(1) em(1) $bs22;
 
             &.xsmall {
                 flex: 1 0 0;
