--- a/src/sass/modules/component/element/tooltip/_tooltipsPlaceholder.scss
+++ b/src/sass/modules/component/element/tooltip/_tooltipsPlaceholder.scss
@@ -15,5 +15,6 @@
         content: '?';
         padding-left: em(5);
         padding-right: em(20);
+        text-shadow: 0 em(1) em(2) $bs12;
     }
 }
