--- a/src/sass/modules/component/element/tooltip/_tooltipsmixin.scss
+++ b/src/sass/modules/component/element/tooltip/_tooltipsmixin.scss
@@ -11,6 +11,7 @@
             overflow: auto;
             padding: em(16);
             position: absolute;
+            text-shadow: 0 em(1) em(2) $bs22;
             white-space: normal;
             width: auto;
             z-index: 999;
