--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -18,6 +18,7 @@
 @import 'modules/component/element/tooltip/tooltip';
 @import 'modules/component/element/blockquote/blockquote';
 @import 'modules/component/element/modal/modal';
+//@import 'modules/component/element/modal/x-on-modal';
 @import 'modules/template_specific/accordeon/accordeon';
 @import 'modules/template_specific/infobox/infobox';
 @import 'modules/template_specific/title/title';
