--- a/src/sass/modules/component/form/_input.scss
+++ b/src/sass/modules/component/form/_input.scss
@@ -21,8 +21,12 @@
     }
 
     &::placeholder {
+        color: lighten($textcolor, 10%);
         font-family: sans-serif;
+        font-size: ms(0);
         font-style: italic;
+        font-weight: lighter;
+
     }
 
     &:disabled {
