--- a/src/sass/modules/component/form/currencyInput/_currency.scss
+++ b/src/sass/modules/component/form/currencyInput/_currency.scss
@@ -1,5 +1,5 @@
 %currency {
-    @include flexbox(row, wrap, flex-start, stretch);
+    @include flexbox(row, wrap, flex-start, flex-start);
     border: 0;
     display: flex;
     width: 100%;
@@ -15,7 +15,12 @@
         width: 100%;
 
         &:focus {
-            @extend %input;
+            height: em(26);
+            margin-left: 0;
+            margin-right: 0;
+            padding-right: em(2);
+            text-align: right;
+            width: 100%;
         }
 
         //sass-lint:disable no-vendor-prefixes
@@ -27,16 +32,17 @@
         }
     }
 
-    &>shortlabel {
+    label {
         @extend %label;
         background-color: $accent;
-
         color: $white;
         display: block;
-        flex: 0 0 em(20);
+        flex: 0 0 em(26);
         font-family: sans-serif;
-        padding: em(8) 0;
+        height: em(26);
+        padding: em(6) 0 0;
         text-align: center;
+        text-shadow: 0 em(1) em(2) $bs12;
 
         &::after {
             content: '$';
