--- a/src/sass/modules/component/form/input-group/_inputgroupPlacholder.scss
+++ b/src/sass/modules/component/form/input-group/_inputgroupPlacholder.scss
@@ -15,7 +15,7 @@
 
     }
 
-    .shortlabel {
+    label {
         @extend %label;
         background-color: $input-border;
         font-size: ms(0);
