--- a/src/sass/modules/template_specific/infobox/_infoboxPlaceholder.scss
+++ b/src/sass/modules/template_specific/infobox/_infoboxPlaceholder.scss
@@ -13,6 +13,7 @@
         margin-bottom: em(10);
         padding: em(9) em(5);
         position: relative;
+        text-shadow: 0 em(1) em(2) $bs19;
         text-transform: uppercase;
         width: 100%;
 
