--- a/src/sass/modules/core/color-text-bg/color-text-BG.scss
+++ b/src/sass/modules/core/color-text-bg/color-text-BG.scss
@@ -1,58 +1,35 @@
-﻿$color-list:
-$white,
-$black,
-$accent,
-$primary,
-$secondary,
-$textcolor,
-$alert,
-$warning,
-$success,
-//$twitter,
-//$facebook,
-//$googleplus,
-//$pinterest,
-//$linkedin,
-//$youtube,
-//$vimeo,
-//$instagram,
-//$flickr,
-//$dribbble,
-//$foursquare,
-;
-//sass-lint:disable no-color-keywords
-$color-name:
-white,
-black,
-accent,
-primary,
-secondary,
-textcolor,
-alert,
-warning,
-success,
-//twitter,
-//facebook,
-//googleplus,
-//pinterest,
-//linkedin,
-//youtube,
-//vimeo,
-//instagram,
-//flickr,
-//dribbble,
-//foursquare,
-;
+$colors: (
+    'white': '$white',
+    'black': '$black',
+    'accent': '$accent',
+    'primary': '$primary',
+    'secondary': '$secondary',
+    'textcolor': '$textcolor',
+    'alert': '$alert',
+    'warning': '$warning',
+    'success': '$success',
+    'twitter': '$twitter',
+    'facebook': '$facebook',
+    'googleplus': '$googleplus',
+    'pinterest': '$pinterest',
+    'linkedin': '$linkedin',
+    'youtube': '$youtube',
+    'vimeo': '$vimeo',
+    'instagram': '$instagram',
+    'flickr': '$flickr',
+    'dribbble': '$dribbble',
+    'foursquare': '$foursquare'
+);
 
-@for $i from 1 through length($color-list) {
+
+@each $colorname, $color in $colors {
     //sass-lint:disable no-important
-    .textcolor-#{nth($color-name, $i)} {
-        color: nth($color-list, $i) !important;
+    .textcolor-#{$colorname} {
+        color: $color !important;
     }
 
-    .bgcolor-#{nth($color-name, $i)} {
-        background-color: nth($color-list, $i) !important;
+    .bgcolor-#{$colorname} {
+        background-color: $color !important;
         //sass-lint:enable no-important
-
     }
 }
